added media to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -175,8 +175,8 @@ media/
 staticfiles/
 
 # Allow all profile pictures
-!media/profile_pics/
-!media/profile_pics/*
+# !media/profile_pics/
+# !media/profile_pics/*
 
 # qodo
 .qodo/
