--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto3==1.37.8
 botocore==1.37.8
 dj-database-url==2.3.0
 Django==5.1.6
+django-extensions==3.2.3
 django-smart-selects==1.7.2
 django-storages==1.14.5
 djangorestframework==3.15.2
